# facsim

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  tokens.css
.claude/: launch.json
.hallmark/: log.json
cache_gen/: __init__.py  cli.py  crawl.py  enrich.py  extract.py  indexes.py  render.py  theme.py
deploy/: apache-vhost.conf.template  crontab.example  facsim.service  facsim.timer  rebuild.sh
