[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "facsim"
version = "0.1.0"
description = "Generate an LLM-optimized static mirror (cache) of a website."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "PyYAML>=6.0",
    "lxml>=5.0",
    "trafilatura>=1.8",
    "markdown>=3.5",
]

[project.optional-dependencies]
# Only needed when enrich.enabled is true (per-page TL;DR + FAQ).
enrich = ["anthropic>=0.40"]

[project.scripts]
facsim = "cache_gen.cli:main"

[tool.setuptools]
packages = ["cache_gen"]
